# oberbaumbrucke

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  embeddings_from_icd10_titles.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: analyze_matches.py  analyze_matches_from_version_by_models.py  compare_models.py  embeddings_from_icd10_titles.py  format_cid10bra_icd10who_file.py  heuristics_maximum_common_ordered_subtree_isomorphism.py  mappings_validation.py  match_experiments.py  mcosi.py  results.py  subgraphs.py  validation_with_mappings.py  visualizing_overlaps.py
oberbaum/: cli.py  config.py  embeddings.py  experiments.py  icd_graph.py  viz.py
oberbaum/graphs/: brazil.py  germany.py  usa.py  who.py
oberbaum/icd_graph/: embeddings.py  experiments.py  graph.py  graph_overlap.py  match.py  models.py
oberbaum/icd_graph/graphs/: base.py  brazil.py  germany.py  usa.py  who.py
tests/: conftest.py  helpers.py  test_cli.py  test_embeddings.py  test_icd_graph.py
tests/fixtures/: subgraph-cid-10-bra-B180.gml  subgraph-icd-10-cm-H938-include-children.gml  subgraph-icd-10-cm-S361-include-children.gml  subgraph-icd-10-cm-S361.gml  subgraph-icd-10-cm-W5522.gml  subgraph-icd-10-gm-O47-include-children.gml  subgraph-icd-10-gm-S3608.gml  subgraph-icd-10-gm-S361-include-children.gml  subgraph-icd-10-gm-Z75-include-children.gml  subgraph-icd-10-who-C570-include-children.gml  subgraph-icd-10-who-H93-include-children.gml  subgraph-icd-10-who-O47-include-children.gml  subgraph-icd-10-who-X53-include-children.gml  subgraph-icd-10-who-Z75-include-children.gml  subgraph_B180_cid10.gml
tests/graphs/: test_base.py  test_brazil.py  test_germany.py  test_usa.py  test_who.py
tests/icd_graph/: conftest.py  test_cid10_2018_graph.py  test_cid10_graph.py  test_graph_overlap.py  test_icd10_cm.py  test_icd10_gm.py  test_icd10_who.py  test_icd_graph.py  test_match.py  test_usa.py
