[project]
name = "oberbaum"
version = "0.1.0"
description = "A multilingual bridge between ICD-10 versions."
readme = "README.md"
authors = [
    { name = "Ana Paula Gomes", email = "apgomes88+obb@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "lxml>=5.4.0",
    "marimo>=0.13.0",
    "networkx>=3.4.2",
    "plotly>=6.0.1",
    "polars>=1.27.1",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "typer>=0.15.2",
]

[project.scripts]
oberbaum = "oberbaum.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that will need to download files from the internet",
]

[tool.isort]
profile = "black"
